# dsa

./: Makefile  README.md  compose.yml  pyproject.toml
docker/: Dockerfile  compose.yml
src/algorithms/: test.py
src/algorithms/sorting/: bubble_sort.ipynb  sorting_concepts.ipynb
src/algorithms/sorting/bubble_sort/: bubble_sort.ipynb  first_optimization.py  no_optimizations.py  refactored.py  second_optimization.py
src/algorithms/trees/: BTNode.py  BTree.py  binary_trees.ipynb
src/manim/: bubble_sort.py  test.py
