[tool.poetry]
name = "jupyter-lab-dsa"
version = "0.1.0"
description = ""
authors = ["javi <3051496+lifeBalance@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.0.8"
jupyter-book = "^0.15.1"
theme-darcula = "^4.0.0"
nb-js-diagrammers = "^0.0.9"
jupyterlab-myst = "^2.1.0"
ipywidgets = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
